--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,13 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
 file.reference.U27-public_html=public_html
 file.reference.U27-test=test
+file.reference.WebServerScripting-public_html=public_html
+file.reference.WebServerScripting-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.U27-public_html}
-test.folder=${file.reference.U27-test}
+site.root.folder=${file.reference.WebServerScripting-public_html}
+start.file=index.html
+test.folder=${file.reference.WebServerScripting-test}
+web.context.root=/WebServerScripting
